--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.4",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "child_process": "^1.0.2",
+    "framer-motion": "^10.12.21",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0"
