--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.4",
-    "@chakra-ui/react": "^2.7.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@prisma/client": "5.0.0",
+    "@types/node": "^20.4.2",
+    "autoprefixer": "^10.4.14",
     "child_process": "^1.0.2",
-    "framer-motion": "^10.12.21",
     "next": "13.4.10",
+    "next-mdx-remote": "^4.4.1",
+    "postcss": "^8.4.26",
+    "prisma": "^5.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rehype-pretty-code": "^0.10.0",
+    "shiki": "^0.14.3",
+    "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
