--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/next-js": "^2.1.4",
+    "@monaco-editor/react": "^4.5.1",
     "@prisma/client": "5.0.0",
     "@types/node": "^20.4.2",
+    "@zeit/next-css": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "child_process": "^1.0.2",
     "next": "13.4.10",
@@ -25,5 +26,9 @@
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/prismjs": "^1.26.0",
+    "@types/react-syntax-highlighter": "^15.5.7"
   }
 }
